--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShortBooks">
+        <activity android:name=".MySentencesActivity"
+            android:exported="false" />
         <activity
             android:name=".AddBookActivity"
             android:exported="false" />
